--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="logo_desc">The PRSPCT Logo</string>
     <string name="loading">Loading...</string>
     <string name="LoadingDesc">Loading icon</string>
+    <string name="title_activity_new_news_item">NewNewsItemActivity</string>
 
 </resources>
