--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="loading">Loading...</string>
     <string name="LoadingDesc">Loading icon</string>
     <string name="title_activity_new_news_item">NewNewsItemActivity</string>
+    <string name="title_activity_single_news_item">SingleNewsItemActivity</string>
 
 </resources>
